--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "csv-parse": "^6.1.0",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
-    "nasa-project-api": "file:"
+    "nasa-project-api": "file:",
+    "pm2": "^6.0.8"
   },
   "devDependencies": {
     "jest": "^30.0.5",
