--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "express": "^5.1.0",
+    "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "nasa-project-api": "file:",
     "pm2": "^6.0.8"
